# text

./: CMakeLists.txt  readme.md
include/: bm.hh  kmp.hh  ukkonen.hh
test/: CMakeLists.txt  bm.cc  kmp.cc  ukkonen.cc
